pxc/tests/test_130_constvec/cvec2.px
namespace cvec2;
public import common -;

{
  cvarray{int} v;
  v.push_back(3);
  v.push_back(4);
  v.push_back(5);
  v[0] = 5; // error
  println(v);
}
